--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="content">
+      <%= yield %>
+    </div>
 
     <%= render partial: 'shared/footer' %>
   </body>
