--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,5 @@
 <div id="footer">
-  <%= link_to "Open Source Forum Software - Version: #{Forum::Application::VERSION}", 'https://github.com/mschnitzer/forum', target: '_blank' %>
+  <div id="copyright">
+    <%= link_to "Open Source Forum Software - Version: #{Forum::Application::VERSION}", 'https://github.com/mschnitzer/forum', target: '_blank' %>
+  </div>
 </div>
