--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,12 @@
   </head>
 
   <body>
+    <%= render partial: 'shared/header' %>
+
     <div id="content">
+      <% if flash[:error] %><div class="alert alert-danger"><%= flash[:error] %></div><% end %>
+      <% if flash[:success] %><div class="alert alert-success"><%= flash[:success] %></div><% end %>
+
       <%= yield %>
     </div>
 
