--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="user-cp">
-  <% if User.current %>
+  <% if User.current.logged_in? %>
     <%= t(:ucp_logged_in_as, username: User.current.username) %>
   <% else %>
     <%= link_to t(:ucp_title_register), users_new_path %>
