Add first design draft

--- a/app/assets/stylesheets/forum.scss
+++ b/app/assets/stylesheets/forum.scss
@@ -2,15 +2,96 @@ body {
   background-color: #f5f5f5;
 }
 
+#user-cp {
+  background-color: #002768;
+  color: #ffffff;
+  padding: 8pt;
+  font-size: 15px;
+
+  .item {
+    background-color: #002768;
+    padding: 8pt;
+
+    a:link, a:visited {
+      padding: 8pt;
+      color: #ffffff !important;
+      text-decoration: none !important;
+    }
+
+    a:active, a:hover {
+      padding: 8pt;
+      color: #ffffff !important;
+      background-color: #002259;
+      text-decoration: none !important;
+    }
+  }
+}
+
+#header {
+  background-color: #12299b;
+  font-size: 20pt;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 30pt;
+  padding-bottom: 30pt;
+
+  a:link, a:visited {
+    color: #ffffff;
+    text-decoration: underline;
+  }
+
+  a:active, a:hover {
+    color: #ffffff;
+    text-decoration: none;
+  }
+}
+
 #content {
   background-color: #ffffff;
   padding: 20pt;
 
   .board-category {
-    background-color: #636363;
+    background-color: #002768;
+    -webkit-box-shadow: 1px 10px 20px -9px rgba(0,0,0,0.63);
+    -moz-box-shadow: 1px 10px 20px -9px rgba(0,0,0,0.63);
+    box-shadow: 1px 10px 20px -9px rgba(0,0,0,0.63);
+
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
 
     .board-category-name {
       color: #ffffff;
+      font-weight: bold;
+      letter-spacing: 1.2px;
+
+      border-left: 1px solid #002768;
+      border-right: 1px solid #002768;
+      border-bottom: 1px solid #002768;
+    }
+
+    .board {
+      border-left: 1px solid #e5e4e3;
+      border-right: 1px solid #e5e4e3;
+      border-bottom: 1px solid #e5e4e3;
+
+      .board-description {
+        font-size: 15px;
+      }
+    }
+
+    .board-name {
+      font-size: 20px;
+
+      a:link, a:visited {
+        color: #e86502;
+        text-decoration: none;
+      }
+
+      a:active, a:hover {
+        color: #a34701;
+        text-decoration: none;
+      }
     }
   }
 }
