--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,5 +1,5 @@
 <% @categories.each do |category| %>
-  <div id="board-category-<%= category.id %>" class="board-category card">
+  <div id="board-category-<%= category.id %>" class="board-category">
     <div class="board-category-name card-header">
       <%= category.name %>
     </div>
@@ -7,8 +7,8 @@
       <ul class="boards-list list-group list-group-flush">
         <% category.boards.order(position: :asc).each do |board| %>
           <li id="board-<%= board.id %>" class="board list-group-item">
-            <span class="card-text"><%= link_to board.name, boards_show_path(board) %></span><br />
-            <span class="card-text"><small class="text-muted"><%= board.description %></small></span>
+            <span class="board-name card-text"><%= link_to board.name, boards_show_path(board) %></span><br />
+            <span class="board-description card-text"><small class="text-muted"><%= board.description %></small></span>
           </li>
         <% end %>
       </ul>
