--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,12 +1,12 @@
 <% @categories.each do |category| %>
-  <div id="board-category-<%= category.id %>" class="board-category">
-    <div class="board-category-name card-header">
+  <div id="board-category-<%= category.id %>" class="box-shadow board-category">
+    <div class="header">
       <%= category.name %>
     </div>
     <% if category.boards? %>
-      <ul class="boards-list list-group list-group-flush">
+      <ul class="list-group list-group-flush">
         <% category.boards.order(position: :asc).each do |board| %>
-          <li id="board-<%= board.id %>" class="board list-group-item">
+          <li id="board-<%= board.id %>" class="boards list-group-item">
             <span class="board-name card-text"><%= link_to board.name, boards_show_path(board) %></span><br />
             <span class="board-description card-text"><small class="text-muted"><%= board.description %></small></span>
           </li>
