--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,7 @@
 <div id="user-cp">
   <% if User.current.logged_in? %>
     <%= t(:ucp_logged_in_as, username: User.current.username) %>
+    <span class="item"><%= link_to t(:ucp_title_logout), users_logout_path, data: { confirm: t(:ucp_logout_confirmation) } %></span>
   <% else %>
     <span class="item"><%= link_to t(:ucp_title_register), users_new_path %></span>
   <% end %>
