Change background color and remove border from footer

--- a/app/assets/stylesheets/forum.scss
+++ b/app/assets/stylesheets/forum.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #f5f5f5;
+  background-color: #efefef;
 }
 
 #user-cp {
@@ -134,7 +134,6 @@ body {
 }
 
 #footer {
-  border-top: 1px solid #000000;
   padding-top: 10pt;
   font-size: 13px;
 
