Add board icon on index page

--- a/app/assets/stylesheets/forum.scss
+++ b/app/assets/stylesheets/forum.scss
@@ -216,6 +216,14 @@ label {
   font-size: 11px;
 }
 
+.board-icon {
+  color: #002768;
+}
+
+.board-info {
+  padding-left: 10pt;
+}
+
 #breadcrumbs {
   background-color: #efefef;
   padding: 5pt 20pt 5pt 20pt;
