--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -9,8 +9,15 @@
           <% category.boards.order(position: :asc).each do |board| %>
             <% if policy(board).show? %>
               <li id="board-<%= board.id %>" class="boards list-group-item">
-                <span class="board-name card-text"><%= link_to board.name, boards_show_path(board) %></span><br />
-                <span class="board-description card-text"><small class="text-muted"><%= board.description %></small></span>
+                <table border="0">
+                  <tr>
+                    <td><%= icon('fas', 'folder-open', class: 'board-icon fa-2x') %></td>
+                    <td class="board-info">
+                      <span class="board-name card-text"><%= link_to board.name, boards_show_path(board) %></span><br />
+                      <span class="board-description card-text"><small class="text-muted"><%= board.description %></small></span>
+                    </td>
+                  </tr>
+                </table>
               </li>
             <% end %>
           <% end %>
