--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  */
 @import "bootstrap";
+@import "bootstrap_extensions";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "forum";
