--- a/app/views/board_thread_posts/_post.html.erb
+++ b/app/views/board_thread_posts/_post.html.erb
@@ -4,10 +4,16 @@
   </div>
   <div class="post-content<% if post.disabled %> post-content-disabled<% end %>">
     <div class="post-header">
-      <% if post.title %>
-        <div class="post-title"><%= post.title %></div>
-      <% end %>
-      <div class="post-time"><%= I18n.l post.created_at %></div>
+      <div class="post-header-details">
+        <% if post.title %>
+          <div class="post-title"><%= post.title %></div>
+        <% end %>
+        <div class="post-time"><%= I18n.l post.created_at %></div>
+      </div>
+      <div class="post-header-counter">
+        <span class="post-counter"><%= link_to post_number, "#post-#{post.id}" %></span>
+      </div>
+      <div class="clear-both"></div>
     </div>
     <div class="post-content-inner">
       <%= simple_format post.message %>
